# vkraytracing

./: .gitignore  README.md  analyze_convergence.py  materialTest.bat  piramid.bat  reference_images.bat  run.bat  test.bat
scripts/: analyze_convergence_exr.py  convert_exr_to_png.py  pruebas_de_convergencia.bat  reference_images.bat
vk_raytracing/: CMakeLists.txt
vk_raytracing/common/: imfilebrowser.h  imgui_helper.cpp  imgui_helper.h  obj_loader.cpp  obj_loader.h  scene_loader.cpp  scene_loader.h  startup_load.h  tinyexr.h
vk_raytracing/media/scenes/: CornellBox-Sphere.mtl  CornellBox-Water.mtl  CornellBubble.scn  San_Miguel.scn  cornellbox_mirror.scn  cornellbox_original.scn  cornellbox_sphere.scn  cornellbox_sphere_antiguo.scn  cornellbox_sphere_mesh.scn  cornellbox_water.scn  directional_light_test.scn  luz_pequena.mtl  masking.scn  muchas_esferas.scn  mundo.scn  sponza.scn  sponza_luces.scn  test.scn  tragaluz_doble.mtl  veach_bidi.mtl
vk_raytracing/media/scenes/Anisotropic/: aniso.scn  navidad.scn  navidad_texture.scn  vinilo.scn
vk_raytracing/media/scenes/Anisotropic/Navidad/: bola.mtl  escena.mtl
vk_raytracing/media/scenes/Anisotropic/Vinilo/: escena.mtl
vk_raytracing/media/scenes/BRDF/: brdf.scn  skybox.mtl
vk_raytracing/media/scenes/Bidirectional/: veach_alt.blend  veach_alt.blend1  veach_lamps.scn  veach_lamps_alt.scn  veach_lamps_piramide.scn
vk_raytracing/media/scenes/Bidirectional/models/: veach_lamps.mtl  veach_lamps_alt.mtl
vk_raytracing/media/scenes/DOF/: DOF.scn  monos.mtl  monos.scn  screne.mtl
vk_raytracing/media/scenes/DisneyTest/: anisotropic.scn  metallic.scn  sheen.scn  sheentint.scn  specular.scn  specularTint.scn  subsurface.scn
vk_raytracing/media/scenes/DisneyTest/models/: Escenario.mtl
vk_raytracing/media/scenes/DisneyTest2/anisotropic/: anisotropic0.scn  anisotropic025.scn  anisotropic05.scn  anisotropic075.scn  anisotropic1.scn
vk_raytracing/media/scenes/DisneyTest2/ior/: ior0.scn  ior025.scn  ior05.scn  ior075.scn  ior1.scn
vk_raytracing/media/scenes/DisneyTest2/metallic/: metallic0.scn  metallic025.scn  metallic05.scn  metallic075.scn  metallic1.scn
vk_raytracing/media/scenes/DisneyTest2/models/: WalterGlass.mtl
vk_raytracing/media/scenes/DisneyTest2/opacity/: opacity025.scn  opacity05.scn  opacity075.scn  opacity1.scn
vk_raytracing/media/scenes/DisneyTest2/roughness/: roughness0.scn  roughness025.scn  roughness05.scn  roughness075.scn  roughness1.scn
vk_raytracing/media/scenes/DisneyTest2/sheen/: sheen0.scn  sheen025.scn  sheen05.scn  sheen075.scn  sheen1.scn
vk_raytracing/media/scenes/DisneyTest2/sheenTint/: sheenTint0.scn  sheenTint025.scn  sheenTint05.scn  sheenTint075.scn  sheenTint1.scn
vk_raytracing/media/scenes/DisneyTest2/specular/: specular0.scn  specular025.scn  specular05.scn  specular075.scn  specular1.scn
vk_raytracing/media/scenes/DisneyTest2/specutlarTint/: specular0.scn  specular025.scn  specular05.scn  specular075.scn  specular1.scn
vk_raytracing/media/scenes/RoughnessTests/: PatronConductor.mtl  PatronConductor.scn  PatronDielectrico.mtl  PatronDielectrico.scn  WalterGlass.blend  WalterGlass.blend1  WalterGlass.mtl  WalterGlass.scn
vk_raytracing/media/scenes/models/: CornellBox-Empty.mtl  CornellBox-Original.mtl  lucy.mtl  water.mtl
vk_raytracing/media/scenes/old-cooking-pot/: cooking_pot.scn  cooking_pot_preview.scn
vk_raytracing/vk_bidirectional_path_tracer/: main.cpp
vk_raytracing/vk_bidirectional_path_tracer/shaders/: random.glsl  raytrace.rchit  raytrace.rgen
vk_raytracing/vk_path_tracer/: CMakeLists.txt  hello_vulkan.cpp  hello_vulkan.h  main.cpp  vulkan_handler.cpp  vulkan_handler.h
vk_raytracing/vk_path_tracer/shaders/: backward_pathtracer.rchit  backward_pathtracer.rgen  backward_pathtracer.rmiss  backward_pathtracer_nee.rahit  backward_pathtracer_nee.rchit  backward_pathtracer_nee.rgen  backward_pathtracer_nee_parametric.rchit  backward_pathtracer_nee_primitives.rchit  backward_pathtracer_parametric.rchit  backward_pathtracer_primitives.rchit  bidirectional_pathtracer.rchit  bidirectional_pathtracer.rgen  bidirectional_pathtracer_parametric.rchit  bidirectional_pathtracer_primitives.rchit  host_device.h  lights.glsl  masking.glsl  material.glsl  pathtracer.frag  pathtracer_parametric.rint  random.glsl  raster.frag  raster.vert  raycommon.glsl  raytrace.rchit  raytrace.rgen  raytrace.rmiss  shadowray_pathtracer.rchit  shadowray_pathtracer.rgen  shadowray_pathtracer_parametric.rchit  simple_pathtracer.rahit  simple_pathtracer.rchit  simple_pathtracer.rgen  simple_pathtracer.rmiss  simple_pathtracer_parametric.rchit  wavefront.glsl
(+7 files in other folders)
